--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 overflow-x: hidden;
             }
         </style>
-        <title>SPSDevs</title>
+        <title>TCDG</title>
     </head>
     <body>
         <header class="md-toolbar">
