--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
                 overflow-x: hidden;
             }
         </style>
+        <!--Meta-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>TCDG</title>
     </head>
     <body>
         <header class="md-toolbar">
-            <button class="md-toolbar__icons">
+            <button class="md-toolbar__icons md-js-menu-show">
                 <i class="material-icons">menu</i>
                 <span class="tooltip">Menu</span>
             </button>
@@ -37,5 +39,19 @@
 Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
             </section>
         </main>
+        <aside class="md-js-side-nav md-side-nav">
+            <nav class="md-js-side-nav-container md-side-nav__container">
+                <header class="md-side-nav__header">
+                    Side Nav
+                </header>
+                <ul class="md-side-nav__content">
+                    <li>One</li>
+                    <li>Two</li>
+                    <li>Three</li>
+                    <li>Four</li>
+                </ul>
+            </nav>
+        </aside>
+        <script src='scripts/side-nav.js'></script>
     </body>
 </html>
