added sticky header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <title>TCDG</title>
     </head>
     <body>
-        <header class="md-toolbar">
+        <header class="md-toolbar sticky-header">
             <button class="md-toolbar__icons md-js-menu-show">
                 <i class="material-icons">menu</i>
                 <span class="tooltip">Menu</span>
@@ -30,7 +30,7 @@
                 <span class="tooltip">More</span>
             </button>
         </header>
-        <main>
+        <main class="md-content__sticky-header">
             <section class="md-card">
                 <p class="md-card__title">Hello World</p>
                 <p class="md-card__subtitle">Lorem Ipsum</p>
