some responsive breakpoints

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             body {
                 margin: 0;
                 overflow-x: hidden;
+                background-color: #FAFAFA;
             }
         </style>
         <!--Meta-->
@@ -17,8 +18,8 @@
         <title>TCDG</title>
     </head>
     <body>
-        <header class="md-toolbar sticky-header">
-            <button class="md-toolbar__icons md-js-menu-show">
+        <header id="header" class="md-toolbar sticky-header">
+            <button class="md-toolbar__icons md-toolbar__icons-menu md-js-menu-show">
                 <i class="material-icons">menu</i>
                 <span class="tooltip">Menu</span>
             </button>
