Chrome color meta tag

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </style>
         <!--Meta-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#FAFAFA">
         <title>TCDG</title>
     </head>
     <body>
