--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
 
 Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
             </section>
+            <button class="md-button raised">Button</button>
         </main>
         <aside class="md-js-side-nav md-side-nav">
             <nav class="md-js-side-nav-container md-side-nav__container">
                 <header class="md-side-nav__header">
-                    Side Nav
+                    <div class="content md-side-nav__header-text">
+                        <p class="md-side-nav__header-title">Colective Dev</p>
+                        <p class="md-side-nav__header-subtitle">Home</p>
+                    </div>
                 </header>
                 <ul class="md-side-nav__content">
                     <li>One</li>
@@ -55,5 +59,6 @@ Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metu
             </nav>
         </aside>
         <script src='scripts/side-nav.js'></script>
+        <script src='scripts/snackbar.js'></script>
     </body>
 </html>
