--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="styles/css/styles.css" />
+		    <!--<link rel="shortcut icon" href="images/icons/favicon.png" />-->
+    <link href='http://fonts.googleapis.com/css?family=Hind:400,300,600,500,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+
+    <!-- Bootstrap & Styles -->
+    <link href="slideassets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="slideassets/css/owl.carousel.css" rel="stylesheet">
+    <link href="slideassets/css/owl.theme.css" rel="stylesheet">
+    <link href="slideassets/css/style.css" rel="stylesheet">
         <style>
             body {
                 margin: 0;
@@ -32,16 +41,122 @@
                 <span class="tooltip">More</span>
             </button>
         </header>
-        <main class="md-content__sticky-header">
-            <section class="md-card">
+		<div id="home"></div>
+		
+       <main class="md-content__sticky-header">
+	   
+		   <div class="slidercontainer">
+        <div id="mainslider" class="owl-carousel">
+
+            <div class="item">
+                <div class="slidecaption">
+                    <h2>Slider1</h2>
+                    <h4>About Slider1</h4>
+                    <!--<p><a class="btn btn-slide" href="slider1.html">Learn More</a>
+                    </p>-->
+					<button class="md-button raised">Button</button>
+                </div>
+                <img src="slideassets/images/slider/1.jpg" alt="" />
+            </div>
+
+            <div class="item">
+                <div class="slidecaption">
+                    <h2>Slider2</h2>
+                    <h4>About Slider2</h4>
+                    <p><a class="btn btn-slide" href="slider2.html">Learn More</a>
+                    </p>
+                </div>
+                <img src="slideassets/images/slider/2.jpg" alt="" />
+            </div>
+
+            <div class="item">
+                <div class="slidecaption">
+                    <h2>Slider3</h2>
+                    <h4>About Slider3</h4>
+                    <p><a class="btn btn-slide" href="slider3.html">Learn More</a>
+                    </p>
+                </div>
+                <img src="slideassets/images/slider/3.jpg" alt="" />
+            </div>
+
+            <div class="item">
+                <div class="slidecaption">
+                    <h2>Slider4</h2>
+                    <h4>About Slider4</h4>
+                    <p><a class="btn btn-slide" href="slider4.html">Learn More</a>
+                    </p>
+                </div>
+                <img src="slideassets/images/slider/4.jpg" alt="" />
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-12">
+                <div id="mainslider-nav" class="owl-carousel">
+                    <div class="item"><i class="fa fa-hdd-o "></i>Slider1</div>
+                    <div class="item"><i class="fa fa-tasks"></i>Slider2</div>
+                    <div class="item"><i class="fa fa-cloud"></i>Slider3</div>
+                    <div class="item"><i class="fa fa-cog"></i>Slider4</div>
+                </div>
+            </div>
+        </div>
+    </div>
+	</main>
+	<table style="width:100%;padding: -1px;">
+  <tr>
+<div id="about">
+    <th> <section class="md-card">
                 <p class="md-card__title">Hello World</p>
                 <p class="md-card__subtitle">Lorem Ipsum</p>
-                <p class="md-card__body">dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.
+                <p class="md-card__body">Sans</p>
+            </section></th>
+			<th style="width:100px">
+			<img src="assets/rlogo.png"></img>
+			<h4 class ="md-card__subtitle">
+			TCDG <span class="dot">Collective</span><span class="carriage-return">Devs</span>
+			</h4>
+			</th>
+    <th> <section class="md-card">
+                <p class="md-card__title">Hello World</p>
+                <p class="md-card__subtitle">Lorem Ipsum</p>
+                <p class="md-card__body">Sans</p>
+            </section></th>
+  </tr>
 
-Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
+</table>
+ <section class="md-card">
+                <p class="md-card__title">Hello World</p>
+                <p class="md-card__subtitle">Lorem Ipsum</p>
+                <p class="md-card__body">Sans</p>
             </section>
-            <button class="md-button raised">Button</button>
-        </main>
+</div>
+	
+	
+	<div id="projects">
+	<br></br>
+	<hr></hr>
+	<br></br>
+	<div align="center">
+<h1 class="md-card__title">Projects:</h1>
+           
+            <a href="https://github.com/TCDG/"><button class="md-button raised">GitHub</button></a>
+			<br></br>
+			<table>
+			<tr>
+				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="http://viewservers.com">ProjectName</p></th>
+				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="http://viewservers.com">ProjectName</p> </th>
+				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="http://viewservers.com">ProjectName</p> </th>
+			</tr>
+			<tr>
+				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="http://viewservers.com">ProjectName</p></th>
+				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="http://viewservers.com">ProjectName</p> </th>
+				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="http://viewservers.com">ProjectName</p> </th>
+			</tr>
+			
+			</table>
+			</div>
+			
+        </div>
         <aside class="md-js-side-nav md-side-nav">
             <nav class="md-js-side-nav-container md-side-nav__container">
                 <header class="md-side-nav__header">
@@ -49,16 +164,132 @@ Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metu
                         <p class="md-side-nav__header-title">Colective Dev</p>
                         <p class="md-side-nav__header-subtitle">Home</p>
                     </div>
+
                 </header>
                 <ul class="md-side-nav__content">
-                    <li>One</li>
-                    <li>Two</li>
-                    <li>Three</li>
-                    <li>Four</li>
+                    <a href="#home"><li>Home</li></a>
+                    <a href="#about"><li>About</li></a>
+                    <a href="#projects"><li>Projects</li></a>
+                    <a href="#contact"><li>Contact</li></a>
                 </ul>
             </nav>
         </aside>
         <script src='scripts/side-nav.js'></script>
         <script src='scripts/snackbar.js'></script>
+		<script src="slideassets/js/jquery.min.js"></script>
+     <script src="slideassets/js/bootstrap.min.js"></script> 
+ <script src="slideassets/js/hoverIntent.js"></script>  
+    <script src="slideassets/js/superfish.min.js"></script> 
+    <script src="slideassets/js/owl.carousel.js"></script>
+     <script src="slideassets/js/wow.min.js"></script> 
+     <script src="slideassets/js/jquery.circliful.min.js"></script>
+    <script src="slideassets/js/waypoints.min.js"></script> 
+    <script src="slideassets/js/jquery.slicknav.min.js"></script>
+     <script src="slideassets/js/retina.min.js"></script>
+    <script src="slideassets/js/custom.js"></script>
+
+
+    <script>
+	$(document).ready(function() {
+        $("#testimonials-carousel").owlCarousel({
+            items: 1,
+            autoPlay: 5000,
+            itemsDesktop: [1199, 1],
+            itemsDesktopSmall: [979, 1],
+            itemsTablet: [768, 1]
+        });
+    });
+
+    // ______________ STATS
+jQuery(document).ready(function() {
+$('.statistics').waypoint(function() {
+
+ $('#myStat1').circliful();
+ $('#myStat2').circliful();
+ $('#myStat3').circliful();
+ $('#myStat4').circliful();
+
+}, { offset: 800, triggerOnce: true });
+});
+
+    /* Home Page Slider
+   ========================================================================== */
+    $(document).ready(function() {
+
+
+    var sync1 = $("#mainslider");
+    var sync2 = $("#mainslider-nav");
+
+    sync1.owlCarousel({
+    singleItem : true,
+    slideSpeed : 1000,
+    paginationSpeed: 800,
+    navigation: false,
+    pagination:false,
+    autoPlay:7500,
+    afterAction : syncPosition,
+    responsiveRefreshRate : 200,
+    });
+
+    sync2.owlCarousel({
+    items : 4,
+    itemsDesktop : [1199,4],
+    itemsDesktopSmall : [979,4],
+    itemsTablet : [768,4],
+    itemsMobile : [479,2],
+    pagination:false,
+    responsiveRefreshRate : 100,
+    afterInit : function(el){
+    el.find(".owl-item").eq(0).addClass("synced");
+    }
+    });
+
+    function syncPosition(el){
+    var current = this.currentItem;
+    $("#mainslider-nav")
+    .find(".owl-item")
+    .removeClass("synced")
+    .eq(current)
+    .addClass("synced")
+    if($("#mainslider-nav").data("owlCarousel") !== undefined){
+    center(current)
+    }
+    }
+
+    $("#mainslider-nav").on("click", ".owl-item", function(e){
+    e.preventDefault();
+    var number = $(this).data("owlItem");
+    sync1.trigger("owl.goTo",number);
+    });
+
+    function center(number){
+    var sync2visible = sync2.data("owlCarousel").owl.visibleItems;
+    var num = number;
+    var found = false;
+    for(var i in sync2visible){
+    if(num === sync2visible[i]){
+    var found = true;
+    }
+    }
+
+    if(found===false){
+    if(num>sync2visible[sync2visible.length-1]){
+    sync2.trigger("owl.goTo", num - sync2visible.length+2)
+    }else{
+    if(num - 1 === -1){
+    num = 0;
+    }
+    sync2.trigger("owl.goTo", num);
+    }
+    } else if(num === sync2visible[sync2visible.length-1]){
+    sync2.trigger("owl.goTo", sync2visible[1])
+    } else if(num === sync2visible[0]){
+    sync2.trigger("owl.goTo", num-1)
+    }
+    }
+
+    });
+
+    </script>
     </body>
 </html>
