Added Text & Sliders

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#FAFAFA">
         <title>TCDG</title>
-    </head>
-    <body>
-        <header id="header" class="md-toolbar sticky-header">
+				<header id="header" class="md-toolbar sticky-header">
             <button class="md-toolbar__icons md-toolbar__icons-menu md-js-menu-show">
                 <i class="material-icons">menu</i>
                 <span class="tooltip">Menu</span>
@@ -41,6 +39,10 @@
                 <span class="tooltip">More</span>
             </button>
         </header>
+    </head>
+
+    <body>
+        
 		<div id="home"></div>
 		
        <main class="md-content__sticky-header">
@@ -50,53 +52,51 @@
 
             <div class="item">
                 <div class="slidecaption">
-                    <h2>Slider1</h2>
-                    <h4>About Slider1</h4>
+                    <h2>DiscordBots</h2>
+                    <h4>Using the power of the Discord API, we can create <b>powerful</b> scripts that run on discord servers</h4>
                     <!--<p><a class="btn btn-slide" href="slider1.html">Learn More</a>
                     </p>-->
-					<button class="md-button raised">Button</button>
+					<button class="md-button raised">Our Latest Bot</button>
                 </div>
-                <img src="slideassets/images/slider/1.jpg" alt="" />
+                <img src="slideassets/images/slider/1.png" alt="" />
             </div>
 
             <div class="item">
                 <div class="slidecaption">
-                    <h2>Slider2</h2>
-                    <h4>About Slider2</h4>
-                    <p><a class="btn btn-slide" href="slider2.html">Learn More</a>
-                    </p>
+                    <h2>IOS & Android Apps</h2>
+                    <h4>Our IOS & Android sub-teams can create <b>advanced, effective</b> apps.</h4>
+                    <a href="https://view.our.apps" ><button class="md-button raised">View Our Apps!</button></a>
                 </div>
-                <img src="slideassets/images/slider/2.jpg" alt="" />
+                <img src="slideassets/images/slider/2.png" alt="" />
             </div>
 
             <div class="item">
                 <div class="slidecaption">
-                    <h2>Slider3</h2>
-                    <h4>About Slider3</h4>
-                    <p><a class="btn btn-slide" href="slider3.html">Learn More</a>
-                    </p>
+                    <h2>Scammer Bingo Reborn</h2>
+                    <h4>We are the proud developers of Scammer-Bingo-Reborn</h4>
+                     <a href="https://scammer.bingo.reborn" ><button class="md-button raised">Get It Now!</button></a>
                 </div>
-                <img src="slideassets/images/slider/3.jpg" alt="" />
+                <img src="slideassets/images/slider/3.png" alt="" />
             </div>
 
             <div class="item">
                 <div class="slidecaption">
-                    <h2>Slider4</h2>
-                    <h4>About Slider4</h4>
-                    <p><a class="btn btn-slide" href="slider4.html">Learn More</a>
-                    </p>
+                    <h2>Join Us!</h2>
+                    <h4><b>You</b> can join our dev team!</h4>
+                    <a href="https://goo.gl/forms/PYREtji9qeZJyhNx2" ><button class="md-button raised">Apply Now</button></a>
+                    
                 </div>
-                <img src="slideassets/images/slider/4.jpg" alt="" />
+                <img src="slideassets/images/slider/4.png" alt="" />
             </div>
         </div>
 
         <div class="row">
             <div class="col-sm-12">
                 <div id="mainslider-nav" class="owl-carousel">
-                    <div class="item"><i class="fa fa-hdd-o "></i>Slider1</div>
-                    <div class="item"><i class="fa fa-tasks"></i>Slider2</div>
-                    <div class="item"><i class="fa fa-cloud"></i>Slider3</div>
-                    <div class="item"><i class="fa fa-cog"></i>Slider4</div>
+                    <div class="item"><i class="fa fa-comments"></i>Discord</div>
+                    <div class="item"><i class="fa fa-mobile"></i>Phone Apps</div>
+                    <div class="item"><i class="fa fa-briefcase"></i>Work</div>
+                    <div class="item"><i class="fa fa-user"></i>Join</div>
                 </div>
             </div>
         </div>
@@ -105,10 +105,10 @@
 	<table style="width:100%;padding: -1px;">
   <tr>
 <div id="about">
-    <th> <section class="md-card">
-                <p class="md-card__title">Hello World</p>
-                <p class="md-card__subtitle">Lorem Ipsum</p>
-                <p class="md-card__body">Sans</p>
+    <th style="width:500px;hight:700px"> <section class="md-card">
+                <p class="md-card__title">Our Teams</p>
+                <p class="md-card__subtitle">For Each Projects & Langaues we have Diffrant Sub-Teams. Here are them listed below.</p>
+                <p class="md-card__body"><ul><li>API Apps</li><li>Desktop - Windows</li><li>Desktop - Universal</li><li>Mobile - Android</li><li>Mobile - IOS</li><li>WebBased</li></ul></p>
             </section></th>
 			<th style="width:100px">
 			<img src="assets/rlogo.png"></img>
@@ -116,18 +116,18 @@
 			TCDG <span class="dot">Collective</span><span class="carriage-return">Devs</span>
 			</h4>
 			</th>
-    <th> <section class="md-card">
-                <p class="md-card__title">Hello World</p>
-                <p class="md-card__subtitle">Lorem Ipsum</p>
-                <p class="md-card__body">Sans</p>
+    <th style="width:500px;hight:700px"> <section class="md-card">
+                <p class="md-card__title">Our Langaues</p>
+                <p class="md-card__subtitle">We have many...</p>
+                <p class="md-card__body"><ul><li>VB</li><li>C#</li><li>C++</li><li>Java</li><li>HTML & CSS</li><li>PHP</li><li>JS</li><li>Python.</li><ul></p>
             </section></th>
   </tr>
 
 </table>
  <section class="md-card">
-                <p class="md-card__title">Hello World</p>
-                <p class="md-card__subtitle">Lorem Ipsum</p>
-                <p class="md-card__body">Sans</p>
+                <p class="md-card__title">About Us</p>
+                <p class="md-card__subtitle">What We Do!</p>
+                <p class="md-card__body">Hello There, We are the TCDG or The Colective Developers Group. We have a <a href="https://github.com/orgs/TCDG/people">team</a> of <b>16</b> developers whom of which have their each own skills & langaues. As a Team we create many <a href="#projects">projects</a> togther.</p>
             </section>
 </div>
 	
@@ -157,6 +157,7 @@
 			</div>
 			
         </div>
+
         <aside class="md-js-side-nav md-side-nav">
             <nav class="md-js-side-nav-container md-side-nav__container">
                 <header class="md-side-nav__header">
@@ -174,6 +175,7 @@
                 </ul>
             </nav>
         </aside>
+
         <script src='scripts/side-nav.js'></script>
         <script src='scripts/snackbar.js'></script>
 		<script src="slideassets/js/jquery.min.js"></script>
@@ -291,5 +293,7 @@ $('.statistics').waypoint(function() {
     });
 
     </script>
+
     </body>
+
 </html>
