--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="slideassets/css/owl.carousel.css" rel="stylesheet">
     <link href="slideassets/css/owl.theme.css" rel="stylesheet">
     <link href="slideassets/css/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="fa/css/font-awesome.min.css">
         <style>
             body {
                 margin: 0;
@@ -53,10 +54,10 @@
             <div class="item">
                 <div class="slidecaption">
                     <h2>DiscordBots</h2>
-                    <h4>Using the power of the Discord API, we can create <b>powerful</b> scripts that run on discord servers</h4>
+                    <h4 style="color:white" >Using the power of the Discord API, we can create <b>powerful</b> scripts that run on discord servers</h4>
                     <!--<p><a class="btn btn-slide" href="slider1.html">Learn More</a>
                     </p>-->
-					<button class="md-button raised">Our Latest Bot</button>
+					<a href="https://github.com/TCDG/TCDG-Discord-Bot"> <button class="md-button raised">Our Latest Bot</button></a>
                 </div>
                 <img src="slideassets/images/slider/1.png" alt="" />
             </div>
@@ -65,7 +66,7 @@
                 <div class="slidecaption">
                     <h2>IOS & Android Apps</h2>
                     <h4>Our IOS & Android sub-teams can create <b>advanced, effective</b> apps.</h4>
-                    <a href="https://view.our.apps" ><button class="md-button raised">View Our Apps!</button></a>
+                    <a href="#projects" ><button class="md-button raised">View Our Apps!</button></a>
                 </div>
                 <img src="slideassets/images/slider/2.png" alt="" />
             </div>
@@ -73,8 +74,8 @@
             <div class="item">
                 <div class="slidecaption">
                     <h2>Scammer Bingo Reborn</h2>
-                    <h4>We are the proud developers of Scammer-Bingo-Reborn</h4>
-                     <a href="https://scammer.bingo.reborn" ><button class="md-button raised">Get It Now!</button></a>
+                    <h4 style="color:white">We are the proud developers of Scammer-Bingo-Reborn</h4>
+                     <a href="https://github.com/TCDG/Scammer-Bingo-Reborn/blob/master/README.md" ><button class="md-button raised">Get It Now!</button></a>
                 </div>
                 <img src="slideassets/images/slider/3.png" alt="" />
             </div>
@@ -143,14 +144,14 @@
 			<br></br>
 			<table>
 			<tr>
-				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="http://viewservers.com">ProjectName</p></th>
-				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="http://viewservers.com">ProjectName</p> </th>
-				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="http://viewservers.com">ProjectName</p> </th>
+				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="https://play.google.com/store/apps/details?id=com.xelitexirish.scammerbingo&hl=en_GB">Scammer Bingo Android</p></th>
+				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="https://github.com/TCDG/Scammer-Bingo-Reborn">Scammer Bingo Reborn</p> </th>
+				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="https://github.com/TCDG/Malware-Shield---Android">Android Malware Shield</p> </th>
 			</tr>
 			<tr>
-				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="http://viewservers.com">ProjectName</p></th>
-				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="http://viewservers.com">ProjectName</p> </th>
-				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="http://viewservers.com">ProjectName</p> </th>
+				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="https://github.com/TCDG/Elite-Developer-Discord-Bot">Elite-Dev-Bot</p></th>
+				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="https://github.com/TCDG/Scammer-Bingo-CLI-Edition">Scammer-Bingo-CLI-Edition</p> </th>
+				<th width="200" height="200"><img src="assets/projects/test.png" style="width:200;height:200"></img><p class="md-card__subtitle" style="font-size: 20px"><a href="https://github.com/TCDG/Url-Crawler">Url-Crawler</p> </th>
 			</tr>
 			
 			</table>
@@ -158,6 +159,26 @@
 			
         </div>
 
+		<div id="contact">
+			<br></br>
+	<hr></hr>
+	<br></br>
+		<section class="md-card">
+                <p class="md-card__title">Contact Us.</p>
+                <p class="md-card__subtitle" align="center">
+				<a href="http://twitter.com/dacollectivedev" style="font-size: 35px"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+				<a href="https://www.facebook.com/collectivedev" style="font-size: 35px"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+				<a href="https://github.com/TCDG" style="font-size: 35px"><i class="fa fa-git-square" aria-hidden="true"></i></a>
+				<a href="skype:echo123?chat" style="font-size: 35px"><i class="fa fa-skype" aria-hidden="true"></i></a>
+				<a href="email@email.com" style="font-size: 35px"><i class="fa fa-envelope" aria-hidden="true"></i></a></p>
+                <p class="md-card__body">You can get in Touch with our team Via: 
+				<a href="http://twitter.com/dacollectivedev"> Twitter</a>,
+                <a href="https://www.facebook.com/collectivedev"> Facebook</a>,
+				<a href="skype:echo123?chat"> Skype Chat</a> or
+				<a href="email@email.com"> Email</a>.</p>
+            </section>
+		</div>
+		
         <aside class="md-js-side-nav md-side-nav">
             <nav class="md-js-side-nav-container md-side-nav__container">
                 <header class="md-side-nav__header">
